# atlas-ai

./: .gitignore  README.md  pyproject.toml
.agents_tmp/: PLAN.md
atlas/: __init__.py
atlas/backend/: __init__.py
atlas/backend/api/: __init__.py  main.py
atlas/backend/api/routes/: agents.py  execution.py  llm.py  memory.py  tools.py  workflows.py
atlas/core/agents/: base.py  orchestrator.py  specialized.py
atlas/core/approval/: __init__.py  manager.py  notifiers.py  policies.py
atlas/core/db/: __init__.py
atlas/core/events/: __init__.py  message_bus.py  models.py  subscribers.py
atlas/core/execution/: __init__.py  queue.py  workers.py
atlas/core/llm/: __init__.py  anthropic.py  base.py  factory.py  openai.py
atlas/core/memory/: __init__.py  long_term.py  manager.py  project.py  semantic.py  short_term.py  vector_store.py
atlas/core/models/: __init__.py  agent.py  base.py  memory.py  task.py  workflow.py
atlas/core/planning/: __init__.py  engine.py
atlas/core/sandbox/: __init__.py  container.py  executor.py  restrictions.py
atlas/core/telemetry/: __init__.py  execution_replay.py  logging.py  tracer.py
atlas/core/tools/: __init__.py  base.py  builtins.py  filesystem.py  git.py  http.py  python_exec.py  registry.py  shell.py
atlas/core/workflow/: __init__.py  executor.py
atlas/frontend/: package.json
atlas/frontend/src/app/: globals.css  layout.tsx  page.tsx
atlas/frontend/src/components/: agent-inspector.tsx  chat-interface.tsx  dashboard.tsx  memory-explorer.tsx  navbar.tsx  workflow-builder.tsx
atlas/modules/: __init__.py
atlas/modules/browser/: module.py
atlas/modules/coding/: __init__.py  module.py
atlas/modules/marketmaking/: __init__.py  agent.py  order_book.py  quoting.py  risk.py
atlas/modules/quant/: module.py
atlas/modules/risk/: __init__.py  alerts.py  calculator.py  monitor.py
atlas/plugins/: __init__.py  sdk.py
deployments/docker/: Dockerfile  docker-compose.yml
deployments/kubernetes/: deployment.yaml
tests/unit/: test_agents.py  test_memory.py
